<resources>
    <string name="app_name">Sistema de Inventario</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hola">Bienvenido</string>
    <string name="nav_header_title">Sistema de Inventario</string>
    <string name="nav_header_subtitle">Benjamin Mora - Sebastian Orrego</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="img">IMG</string>
    <string name="add">Agregar</string>
    <string name="update">Actualizar</string>
    <string name="desactivar">descartivar</string>
    <string name="listar">Listar</string>
    <string name="categoria">Categorias</string>
    <string name="provee">Proveedores</string>
    <string name="estadi">Estadistica</string>
    <string name="produc">Productos</string>
    <string name="salir">Salir</string>
    <string name="producto">Producto</string>
    <string name="reporte">Reportes</string>
    <string name="nombrePro">Nombre Proveedor(Empresa)....</string>
    <string name="nombreC">Nombre Contacto....</string>
    <string name="rut">Rut (Empresa)....</string>
    <string name="tel">Telefono....</string>
    <string name="email">Email....</string>
    <string name="FechaI">Fecha Inscripción</string>
    <string name="nombreProducto">Nombre Producto....</string>
    <string name="Cant">Cantidad Disponible....</string>
    <string name="PrecioSinIva">Ingrese Valor....</string>
    <string name="valor">$0</string>
    <string name="Proveedor">Elegir Proveedor....</string>
    <string name="Categoria">Elegir Categoria....</string>
    <string name="cantidad">0</string>
    <string name="valorS">Precio s/Iva:</string>
    <string name="valorC">Precio con Iva:</string>
    <string name="valorD">Precio Dolar:</string>
    <string name="categoriaItem">Categoria:</string>
    <string name="ProveedorItem">Proveedor:</string>
    <string name="calcular">Calcular</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id">Id</string>
    <string name="nombre">Nombre</string>
    <string name="Estado">Estado</string>
    <string name="EditarCategoria">Editar Categoria</string>
    <string name="EditarProveedor">Edición Proveedor</string>
    <string name="EditarProducto">Edición Producto</string>
    <string name="nombreCategoria">Nombre Categoría...</string>
    <string name="estadistica">Estadistica</string>
    <string name="Prueba">Prueba 2 Android</string>
    <string name="Integrantes">Sebastian Orrego - Benjamin Mora</string>
</resources>
