<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AgregarProveedor" android:orientation="vertical">

    <TextView
            android:text="@string/provee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:textStyle="bold"
            android:textAlignment="center" android:textSize="30sp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtNombrePro" android:hint="@string/nombrePro"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtContacto" android:hint="@string/nombreC"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtRut" android:hint="@string/rut"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/txtTelefono" android:hint="@string/tel"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/txtEmail" android:hint="@string/email"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
                android:text="@string/FechaI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btnFecha" android:layout_weight="1"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/lblFecha" android:layout_weight="1"/>
    </LinearLayout>
    <Button
            android:text="@string/add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/btnAgregarProvee"/>
</LinearLayout>